--- a/danusys-drone/src/main/resources/templates/test/createMisson.html
+++ b/danusys-drone/src/main/resources/templates/test/createMisson.html
@@ -63,7 +63,7 @@
         $(`.MissionDetails${i}`).append(`<td><input type="text" class = "gpsZ"  name="gpsZ"> </td>`)
         i++;
 
-    })
+    });
     $("#createMissionButton").on("click", function () {
 
         if ($('#name').val() == "") {
@@ -160,7 +160,7 @@
         if (mission_id === "") {
             alert("미션아이디를 입력하세요");
         } else {
-            stompClient.send("/app/startmission", {}, JSON.stringify({'id': mission_id}));
+            stompClient.send("/app/startmission", {}, JSON.stringify({'droneId': mission_id}));
         }
 
 
