--- a/danusys-drone/src/main/resources/templates/view/pages/drone.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/drone.html
@@ -49,8 +49,8 @@
             <!--            <li><a>설정</a></li>-->
         </ul>
         <ul class="utmenu">
-            <li><i><img src="images/um/utmenuUser.svg"></i></li>
-            <li><i><img src="images/um/utmenuBell.svg"></i></li>
+<!--            <li><i><img src="images/um/utmenuUser.svg"></i></li>-->
+<!--            <li><i><img src="images/um/utmenuBell.svg"></i></li>-->
         </ul>
     </header>
     <!-- droneFrame -->
@@ -62,9 +62,9 @@
                         <div class="box">
                             <div class="select">전체</div>
                             <ul class="list" style="display: none;">
-                                <li class="selected">전체</li>
-                                <li>운용 중</li>
-                                <li>임시 저장</li>
+                                <li class="selected" data-id="all">전체</li>
+                                <li data-id="wait">대기 중</li>
+                                <li data-id="run">운용 중</li>
                             </ul>
                         </div>
                     </div>
@@ -86,77 +86,11 @@
                 </article>
                 <dl class="subTitle">
                     <dt>목록<span class="count_mission_list">59</span></dt>
-                    <!--                    <dd class="button add_drone" ">신규등록</dd>-->
                     <dd class="button " onclick="pageDrone.createMissionPopup()">신규등록</dd>
                 </dl>
                 <div class="listScroll">
                     <ul>
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="gray">수리중</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
 
-
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="gray">수리중</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="yellow">충전중</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="gray">임시저장</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="yellow">충전중</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
-                        <!--                        <li>-->
-                        <!--                            <dl>-->
-                        <!--                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>-->
-                        <!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
-                        <!--                            </dl>-->
-                        <!--                            <p>ID : administrator01</p>-->
-                        <!--                            <p>2021-07-06 09:23:56</p>-->
-                        <!--                        </li>-->
                     </ul>
                 </div>
             </section>
@@ -181,7 +115,7 @@
                     </dd>
                 </dl>
                 <div class="picture">
-                    <img src="">
+                    <img id ="preview-image" src="">
                 </div>
             </section>
             <section class="droneFrameRight">
