--- a/danusys-drone/src/main/resources/templates/view/pages/drone.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/drone.html
@@ -125,7 +125,7 @@
                         <!--                        <dd><span class="count">123</span>건</dd>-->
                     </dl>
                     <ul class="button">
-                        <li class="update_drone_detail_button">수정</li>
+                        <li class="update_drone_detail_button">저장</li>
                         <li class="delete_drone_detail_button">삭제</li>
                     </ul>
                 </div>
