관제 Left menu eventhandler & 단기예보 api적용 테스트

--- a/danusys-platform/src/main/resources/templates/view/pages/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/mntr.html
@@ -8,10 +8,10 @@
     <aside class="lnb">
         <ul>
             <li class="active" data-value="smartPower">스마트분전함</li>
-            <li data-value="drone">드론</li>
-            <li data-value="">MENU<br>3</li>
-            <li data-value="">MENU<br>4</li>
-            <li data-value="">MENU<br>5</li>
+            <li data-value="drone">드론<br>관제</li>
+            <li data-value="addressPlace">주소<br>장소</li>
+            <li data-value="smart">스마트김제</li>
+            <li data-value="etc">추가<br>메뉴</li>
         </ul>
     </aside>
 </th:block>
@@ -34,6 +34,14 @@
                 <li data-value="radius" title="반경측정"><img src="/images/default/mapRadius.svg"></li>
                 <li data-value="eraser" title="지우기"><img src="/images/default/mapEraser.svg"></li>
             </ul>
+        </div>
+        <div class="map_location">
+            <ul>
+                <li data-value="sd">경기도<i><img src="/images/default/arrowNext.svg"></i></li>
+                <li data-value="sgg">광명시<i><img src="/images/default/arrowNext.svg"></i></li>
+                <li data-value="emd">하안동</li>
+            </ul>
+            <p><i><img src="/images/default/icon_weather01.png"></i>맑음 12°</p>
         </div>
         <div id="mousePosition"></div>
         <div id="layerViewer">
