--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -16,14 +16,15 @@
 .lnb ul li.active{color: #dee0e4; background: #3a66e5;}
 
 .menu_fold{position: relative; display: flex; flex-direction: column; width: 320px; background: #1e1f23;}
+.menu_fold:not(.select){display:none;}
 .lnb_fold{display: flex; align-items: center; justify-content: center; position: absolute; top: 50%; left: 100%; transform:translate(0%, -50%); width: 24px; height: 60px; border-top-right-radius: 8px; border-bottom-right-radius: 8px; background: rgba(30,31,35,0.75); cursor: pointer; z-index: 2;}
 .lnb_fold i{width: 7px; height: 12px; margin: 0px 4px 0px 0px;}
 .lnb_fold i img{width: 7px; height: 12px;}
 .toggle_off{display: none; transition: all 0.2s;}
 .toggle_on{display: flex;}
 
-.lnb_tab_section{overflow: hidden; flex: 1; display: flex; flex-direction: column;}
 .lnb_tab_section:not(.select){display:none;}
+.lnb_tab_section{overflow: hidden; flex: 1; display: flex; flex-direction: column;}
 
 /* tab */
 .tab{display: flex; align-items: center; justify-content: space-between; grid-gap: 8px; height: 40px; margin: 0px; padding: 0px 14px; background: #23252b;}
@@ -36,12 +37,14 @@
 .tab li.active a{color: #dee0e4; font-weight: bold;}
 
 /* area_title */
-.area_title{display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 14px; border-bottom: 1px solid #292c34;}
+.area_title{display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 14px; background: #1a1b1f; border-bottom: 1px solid #292c34;}
 .area_title dt{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; font-size: 16px;}
-.area_title dt span{color: #3a66e5; font-weight: bold;}
+.area_title dt span{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px;}
+.area_title dt span.count{color: #3a66e5; font-size: 16px; font-weight: bold;}
+/*.area_title dt span:nth-child(2){grid-gap: 2px; color: #7f8491; font-size: 13px;}*/
 .area_title dt i{width: 20px !important; min-width: 20px !important; height: 20px !important;}
 .area_title dt i img{width: 20px; height: 20px;}
-.area_title dd{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; margin: 0px; color: #7f8491;  cursor: pointer;}
+.area_title dd{display: flex; align-items: center; justify-content: flex-start; grid-gap: 4px; margin: 0px; color: #7f8491;  cursor: pointer;}
 .area_title dd.button{height: 28px; line-height: 26px; padding: 0px 8px; background: #292c34; border-radius: 4px;}
 .area_title dd i{width: 16px; height: 16px;}
 .area_title dd i img{width: 16px; height: 16px;}
@@ -50,26 +53,44 @@
 
 /* search_form */
 .search_form{position: relative; padding: 14px; border-bottom: 2px solid #292c34;}
-.search_form dl{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; height: 34px; border: 1px solid #292c34; border-radius: 4px;}
-.search_form dl dt{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; padding: 0px 14px; border-right: 1px solid #292c34;}
-.search_form dl dt input{flex: 1; padding: 0px; border: none;}
-.search_form dl dt i{width: 20px; height: 20px;}
-.search_form dl dt i img{width: 20px; height: 20px;}
-.search_form dl dd{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; color: #7f8491; cursor: pointer;}
-.search_form dl dd i{width: 16px; height: 16px;}
-.search_form dl dd i img{width: 16px; height: 16px;}
-.search_form dl dd:hover{color: #dee0e4;}
+.search_form > dl{display: flex; flex-direction: column; grid-gap: 12px;}
+.search_form > dl > dt{flex: 1; display: flex; align-items: center; justify-content: space-between; border: 1px solid #292c34; border-radius: 4px;}
+.search_form > dl > dt > input{flex: 1; padding: 0px 14px; border: none;}
+.search_form > dl > dt > i{width: 34px; height: 34px; cursor: pointer;}
+.search_form > dl > dt > i > img{width: 20px; height: 20px;}
+.search_form > dl > dd{display: flex; align-items: center; justify-content: flex-end; grid-gap: 6px; padding: 0px 10px; color: #797d87; cursor: pointer;}
+.search_form > dl > dd:hover{color: #797d87; font-weight: bold;}
+.search_form > dl > dd:hover i{transform: rotate(360deg);}
+.search_form > dl > dd > i{width: 16px; height: 16px;}
+.search_form > dl > dd > i > img{width: 14px; height: 14px;}
 
 /* search_fold */
-.search_fold{position: absolute; z-index: 10; display: flex; flex-direction: column; grid-gap: 14px; height: auto; margin: -1px 0px 0px; padding: 18px; box-sizing: border-box; border: 1px solid #292c34; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; background: #1a1b1d;}
-.search_fold dl{height: auto; display: flex; align-items: stretch; justify-content: flex-start; grid-gap: 14px; border: none;}
-.search_fold dl dt{padding: 0px; color: #797d87; font-weight: bold; border: none;}
-.search_fold dl dd{flex: 1;}
-.search_fold dl dd ul{flex: 1; display: flex; flex-direction: column; grid-gap: 8px;}
-.search_fold dl dd ul li{display: flex; align-items: center; justify-content: space-between;}
+.search_fold{overflow: hidden; position: absolute; z-index: 12; left: 0px; display: flex; flex-direction: column; width: 320px; max-height: 600px; margin: 15px 0px 0px; box-sizing: border-box; border: 1px solid #292c34; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; background: #1a1b1d;}
+.search_fold:not(.select){display:none;}
+.search_fold form{overflow: auto; display: flex; flex-direction: column; grid-gap: 14px; padding: 18px;}
+.search_fold dl{display: flex; flex-direction: column; grid-gap: 14px; padding: 10px 0px 20px;}
+.search_fold dl dt{color: #797d87; font-weight: bold;}
+.search_fold dl dd{flex: 1; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 8px 14px; padding: 0px 2px;}
+.search_fold dl dd > span{}
+.search_fold dl dd > span.checked_all{grid-column: 1 / 3;}
+.search_fold dl dd > span.checked_all > label{width: 100%;}
+.search_fold dl dd > span > label{display: block; width: 129px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; line-height: 18px; font-size: 13px;}
+.search_fold dl.date_set dd{display: flex; align-items: center; justify-content: space-between; padding: 0px 2px;}
+.search_fold dl.date_set dd > span{white-space: nowrap;}
+.search_fold dl.selectbox_set dd{grid-template-columns: 1fr;}
+.search_fold ul.button{display: flex; grid-gap: 8px; padding: 14px 0px; border-top: 1px solid #292c34;}
+.search_fold ul.button li{display: flex; align-items: center; justify-content: space-between;}
+
+/* dropdown_checkbox */
+.search_fold dl.dropdown_checkbox{position: relative; padding: 0px;}
+.search_fold dl.dropdown_checkbox .checkbox_title{width: 100%; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../images/default/arrowSelectBox.svg") 248px center no-repeat #1a1b1d; background-size: 14px; cursor: pointer;}
+.search_fold dl.dropdown_checkbox .checkbox_list{z-index: 1; overflow: hidden; position: absolute; top: 33px; width: 100%; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 8px 14px; padding: 10px 12px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
+.search_fold dl.dropdown_checkbox .checkbox_list:not(.select){display: none;}
+.search_fold dl.dropdown_checkbox .checkbox_list > span.checked_all{grid-column: 1 / 3;}
+.search_fold dl.dropdown_checkbox .checkbox_list > span > label{display: block; max-width: 120px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; line-height: 18px; font-size: 13px;}
 
 /* search_list */
-.search_list{position: relative; flex: 1; overflow: auto; border-bottom: 2px solid #292c34;}
+.search_list{position: relative; flex: 1; overflow: overlay; border-bottom: 2px solid #292c34;}
 .button_top{float: right; position: sticky; right: 10px; bottom: 10px; z-index: 10; display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 40px; background: #2a2d35; box-shadow: 0px 0px 14px rgba(0,0,0,0.6); cursor: pointer;}
 .button_top img{width: 16px; height: 16px; transform: rotate(-90deg); filter: brightness(0) invert(1); opacity: 0.5;}
 .search_list:nth-last-child(1){border: none;}
@@ -159,7 +180,7 @@
 
 
 /* map_location */
-.map_location{position: absolute; top: 10px; left: 330px; z-index: 10; display: flex; align-items: center; justify-content: space-around; width: 324px; height: 40px; box-sizing: border-box; background: #1e1f23; border-radius: 4px;}
+.map_location{position: absolute; top: 10px; left: 10px; z-index: 10; display: flex; align-items: center; justify-content: space-around; width: 324px; height: 40px; box-sizing: border-box; background: #1e1f23; border-radius: 4px;}
 .map_location ul{display: flex; align-items: center; justify-content: center; flex: 1; grid-gap: 4px; height: 100%; padding: 0px 14px; text-align: center; border-right: 1px solid #292c34; box-sizing: border-box;}
 .map_location ul li{flex: 1; display: flex; justify-content: flex-start; grid-gap: 8px; font-size: 14px; color: #7f8491;}
 .map_location ul li:nth-last-child(1){flex: initial;}
