--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -12,6 +12,15 @@
     <!-- common css files -->
     <link rel="stylesheet" type="text/css" href="css/default/layout.css">
 
+    <!-- kurento 영상 연결 -->
+    <script src="/js/constant/constant-real.js"></script>
+    <script src="/js/kurento/midsvr.js"></script>
+    <script src="/js/kurento/video.js"></script>
+    <script src="/js/kurento/adapter.js"></script>
+    <script src="/js/kurento/kurento-client.js"></script>
+    <script src="/js/kurento/kurento-utils.js"></script>
+
+
     <!-- common javascript files-->
     <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
     <script src="/webjars/axios/0.21.1/dist/axios.js"></script>
