--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -5,7 +5,7 @@
 .wrap{display: flex; flex-direction: column; width: 100%; height: 100%; margin: 0px; padding: 0px;}
 .mntr_container{flex: 1; display: flex; flex-direction: row; overflow: hidden;}
 .mntr_container .map_wrap{flex: 1; background: #0c0c0d;}
-.mntr_container .area_info{display: flex; flex-direction: column; width: 440px; background: #1a1b1d;}
+.mntr_container .area_right{display: flex; flex-direction: column; width: 440px; background: #1a1b1d;}
 
 /* lnb */
 .lnb{z-index: 10; width: 60px; background: #1a1b1d; position: unset; height: unset;}
@@ -123,16 +123,16 @@
 /*.checkbox_list li{display: flex; align-items: center; justify-content: flex-start; grid-gap: 12px; line-height: 28px; padding: 4px 0px; color: #dee0e4;}*/
 /*.checkbox_list li > span{flex: 1;}*/
 
-/* area_info */
-.area_info h6{display: flex; align-items: center; justify-content: space-between; grid-gap: 8px; height: 40px; max-height: 40px; min-height: 40px; margin: 0px; padding: 0px 14px; font-size: 16px; background: #23252b;}
-.area_info h6 i{width: 20px; height: 20px; cursor: pointer;}
-.area_info h6 i img{width: 20px; height: 20px;}
-.area_info .tab{justify-content: flex-start; background: #1a1b1d; border-bottom: 1px solid #292c34;}
-.area_info .tab li{flex: initial; text-align: left; padding: 0px 14px;}
-.info_tab_section{flex: 1; display: flex; flex-direction: column;}
-.area_info .area_title{height: 50px;}
-.area_info .ptz_toggle{ display: flex; align-items: center;}
-.area_info .ptz_toggle span{margin: 0px 8px 0px 0px; font-size: 16px; color: #7f8491;}
+/* area_right */
+.area_right h6{display: flex; align-items: center; justify-content: space-between; grid-gap: 8px; height: 40px; max-height: 40px; min-height: 40px; margin: 0px; padding: 0px 14px; font-size: 16px; background: #23252b;}
+.area_right h6 i{width: 20px; height: 20px; cursor: pointer;}
+.area_right h6 i img{width: 20px; height: 20px;}
+.area_right .tab{justify-content: flex-start; background: #1a1b1d; border-bottom: 1px solid #292c34;}
+.area_right .tab li{flex: initial; text-align: left; padding: 0px 14px;}
+.area_right_contents{flex: 1; display: flex; flex-direction: column;}
+.area_right .area_title{height: 50px;}
+.area_right .ptz_toggle{ display: flex; align-items: center;}
+.area_right .ptz_toggle span{margin: 0px 8px 0px 0px; font-size: 16px; color: #7f8491;}
 .ptz_toggle input[type=checkbox]{visibility: hidden; width: 0; height: 0;}
 .ptz_toggle label{cursor: pointer; text-indent: -9999px; width: 50px; height: 28px; background: #292c34; display: block; border-radius: 100px; position: relative;}
 .ptz_toggle label:after{content: ''; position: absolute; top: 4px; left: 5px; width: 20px; height: 20px; background: #7f8491; border-radius: 90px; transition: 0.3s;}
@@ -162,7 +162,7 @@
 .area_bus_station_state dl dd.green{color: #3ad274;}
 .area_bus_station_state dl dd.yellow{color: #f99b22;}
 .area_bus_station_state dl dd.red{color: #ff4f4f;}
-.area_info_off{display: none !important;}
+.area_right_off{display: none !important;}
 
 /* map */
 .map_wrap{position:relative; flex:1; height:100%; background:dodgerblue;}
@@ -248,3 +248,34 @@
 #layerViewer{width: max-content; height: max-content; padding: 10px; border-radius: 5px; background: #23252b; z-index: 2; right: 51px; top: 178px; position: absolute;}
 #layerViewer ul li{padding: 5px; cursor: pointer; border-bottom: 1px solid #a9a9a96b;}
 #layerViewer ul li:hover{background: #53596c;}
+
+/* occur_process */
+.occur_process{overflow: auto; display: flex; flex-direction: column; justify-content: center; width: 100%; height: 200px; margin: 0px; padding: 0px; background: #212327;}
+.process_contents{overflow-x: hidden; display: flex; align-items: center; justify-content: space-between; margin: 0px; padding: 20px; text-align: center;}
+.process_contents dl{position: relative; float: left; width: 25%; margin: 0px; padding: 0px; text-align: center;}
+.process_contents dl dt{width: 100%; margin: 0px; padding: 46px 0px 0px 0px;}
+.process_contents dl dt:before{content: ''; position: absolute; top: 24px; width: 100%; height: 2px; background: #353740;}
+.process_contents dl dt i{z-index: 10; position: absolute; top: 0px; left: 50%; transform: translateX(-24px); display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; margin: 0px auto; padding: 0px; border-radius: 10px; background: #353740;}
+.process_contents dl dt i img{width: 20px; height: 20px; opacity: 0.3;}
+.process_contents dl dd{margin: 0px; padding: 10px 0px; color: #7f8491; font-size: 14px; text-align: center;}
+.process_contents dl:nth-child(1) dt:before{left: 50%;}
+.process_contents dl:nth-last-child(1) dt:before{right: 50%;}
+.process_contents dl.on dt i{background: #3a66e5;}
+.process_contents dl.on dt i img{opacity: 1;}
+.process_contents dl.on dd{color: #dee0e4;}
+.process_contents.step1 dl.on dt:before{background: #3a66e5;}
+.process_contents.step2 dl.on dt:before{background: #3a66e5;}
+.process_contents.step3 dl.on dt:before{background: #3a66e5;}
+.process_contents.step4 dl.on dt:before{background: #3a66e5;}
+.process_contents dl.on dt:after{content: ''; position: absolute; top: 24px; left: 50%; right: 0px; width: 100%; height: 2px;}
+.process_contents.step1 dl.on dt:after{background: #353740;}
+.process_contents.step2 dl:nth-child(2).on dt:after{background: #353740;}
+.process_contents.step3 dl:nth-child(3).on dt:after{background: #353740;}
+.occur_process .button{grid-gap: 8px; margin: 10px auto 0px;}
+
+/* area_right_text */
+.area_right_text{flex: 1; overflow: auto; background: #1e1f23;}
+.area_right_text ul{margin: 20px;}
+.area_right_text ul li{display: grid; grid-template-columns: 0.5fr 1fr; grid-gap: 10px; margin: 10px 0px; line-height: 20px; font-size: 14px;}
+.area_right_text ul li span:nth-child(1){color: #7f8491; font-weight: bold;}
+
