--- a/danusys-drone/src/main/resources/templates/view/pages/drone.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/drone.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title>레이아웃</title>
     <link rel="stylesheet" type="text/css" href="/css/um/drone.css">
-    <link rel="stylesheet" type="text/css" href="/css/default/layout.css">
+<!--    <link rel="stylesheet" type="text/css" href="/css/default/layout.css">-->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="./script.js"></script>
