Linux Thymeleaf path 에러 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/mntr.html
@@ -17,7 +17,7 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <!--<th:block th:insert="/view/commons/map"></th:block>-->
+    <!--<th:block th:insert="view/commons/map"></th:block>-->
     <div id="map" class="map_wrap">
         <div class="map_button">
             <ul class="map_type">
