--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <th:block th:insert="/fragments/default/default"/>
+    <th:block th:insert="fragments/default/default"/>
     <script src="/webjars/jquery-ui/1.13.0/jquery-ui.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/monitoring.css">
     <script type="text/javascript" src="/js/map/controlMap.js"></script>
     <script type="text/javascript" src="/js/pages/mntr.js"></script>
-    <th:block th:insert="/view/commons/map"/>
+    <th:block th:insert="view/commons/map"/>
 </head>
 <body>
     <div class="wrap">
