단기예보 api적용 (임시)

--- a/danusys-platform/src/main/resources/templates/view/pages/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/mntr.html
@@ -41,7 +41,7 @@
                 <!--<li data-value="sgg">광명시<i><img src="/images/default/arrowNext.svg"></i></li>
                 <li data-value="emd">하안동</li>-->
             </ul>
-            <!--<p><i><img src="/images/default/arrowNext.svg"></i></p>-->
+            <i><img src="/images/default/arrowNext.svg"></i>
             <p id="admWeather"><i><img src="/images/default/icon_weather_sunny.png"></i>맑음 12°</p>
         </div>
         <div id="mousePosition"></div>
