--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -184,8 +184,8 @@
 .map_location ul{display: flex; align-items: center; justify-content: center; flex: 1; grid-gap: 4px; height: 100%; padding: 0px 14px; text-align: center; border-right: 1px solid #292c34; box-sizing: border-box;}
 .map_location ul li{flex: 1; display: flex; justify-content: flex-start; grid-gap: 8px; font-size: 14px; color: #7f8491;}
 .map_location ul li:nth-last-child(1){flex: initial;}
-.map_location ul li i{width: 16px; height: 16px; margin: 0px;}
-.map_location ul li i img{height: 100%; margin: auto;}
+.map_location i{width: 16px; height: 16px; margin: 0px;}
+.map_location i img{height: 100%; margin: auto;}
 .map_location p{display: flex; align-items: center; grid-gap: 6px; padding: 0px 14px; color: #7f8491;}
 
 
