--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/default/layout.css">
 
     <!-- kurento 영상 연결 -->
-    <script src="/js/constant/constant-real.js"></script>
+<!--    <script src="/js/constant/constant-real.js"></script>-->
     <script src="/js/kurento/midsvr.js"></script>
     <script src="/js/kurento/video.js"></script>
     <script src="/js/kurento/adapter.js"></script>
