--- a/danusys-drone/src/main/resources/templates/test/createMisson.html
+++ b/danusys-drone/src/main/resources/templates/test/createMisson.html
@@ -110,7 +110,7 @@
     });
 
     function connect() {
-        var socket = new SockJS('/ws');
+        var socket = new SockJS('ws');
         stompClient = Stomp.over(socket);
 
         stompClient.connect({}, function (frame) {
